Fix visibility for dark mode

--- a/app/components/mensa/view/paging.css
+++ b/app/components/mensa/view/paging.css
@@ -1,44 +1,44 @@
 .mensa-table {
-  .paging {
-    @apply flex items-center justify-between border-t border-gray-100 dark:border-gray-700 bg-white dark:bg-gray-800 px-4 py-3 sm:px-6 text-sm;
+    .paging {
+        @apply flex items-center justify-between border-t border-gray-100 dark:border-gray-700 bg-white dark:bg-gray-800 px-4 py-3 sm:px-6 text-sm;
 
-    .pagy {
-      @apply isolate inline-flex -space-x-px text-gray-500 dark:text-gray-400;
+        .pagy {
+            @apply isolate inline-flex -space-x-px text-gray-500 dark:text-gray-400;
 
-      a:not(.gap) {
-        @apply relative inline-flex items-center px-4 py-1.5 text-gray-500 dark:text-gray-400 bg-gray-100 dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:z-20 no-underline;
+            a:not(.gap) {
+                @apply relative inline-flex items-center px-4 py-1.5 text-gray-500 dark:text-gray-400 bg-gray-100 dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:z-20 no-underline;
 
-        &:first-child {
-          border-top-left-radius: 4px;
-          border-bottom-left-radius: 4px;
+                &:first-child {
+                    border-top-left-radius: 4px;
+                    border-bottom-left-radius: 4px;
+                }
+
+                &:last-child {
+                    border-top-right-radius: 4px;
+                    border-bottom-right-radius: 4px;
+                }
+
+                &:hover {
+                    @apply bg-gray-300 dark:bg-gray-600;
+                }
+
+                &:not([href]) {
+                    /* disabled links */
+                    @apply bg-gray-100 dark:bg-gray-800 hover:bg-gray-100 hover:dark:bg-gray-800 text-gray-700 dark:text-gray-100 text-opacity-25 dark:text-opacity-50 cursor-default;
+                }
+
+                &[aria-current="page"] {
+                    @apply z-10 bg-primary-200 dark:bg-primary-800 hover:bg-primary-200 hover:dark:bg-primary-800 text-gray-900 dark:text-white text-opacity-100 dark:text-opacity-100 border-none font-semibold;
+                }
+            }
+
+            label {
+                @apply inline-block whitespace-nowrap bg-gray-200 dark:bg-gray-600 rounded-lg px-4 py-1.5;
+
+                input {
+                    @apply bg-gray-100 dark:bg-gray-700 border-none rounded-md;
+                }
+            }
         }
-
-        &:last-child {
-          border-top-right-radius: 4px;
-          border-bottom-right-radius: 4px;
-        }
-
-        &:hover {
-          @apply bg-gray-300 dark:bg-gray-600;
-        }
-
-        &:not([href]) {
-          /* disabled links */
-          @apply bg-gray-100 dark:bg-gray-800 hover:bg-gray-100 hover:dark:bg-gray-800 text-gray-700 dark:text-gray-100 text-opacity-25 dark:text-opacity-50 cursor-default;
-        }
-
-        &.current {
-          @apply z-10 bg-primary-200 dark:bg-primary-800 hover:bg-primary-200 hover:dark:bg-primary-400 text-opacity-75 dark:text-opacity-75 border-none;
-        }
-      }
-
-      label {
-        @apply inline-block whitespace-nowrap bg-gray-200 dark:bg-gray-600 rounded-lg px-4 py-1.5;
-
-        input {
-          @apply bg-gray-100 dark:bg-gray-700 border-none rounded-md;
-        }
-      }
     }
-  }
 }
